--- a/index.html
+++ b/index.html
@@ -12,12 +12,68 @@
 
 	<!-- Stylesheets!-->
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="css/html5.css" />
 </head>
 <body>
-	<div class="container" id="#header">
+	<div id="wrap">
+		<div class="container" id="header">
+			<div class="row">
+				<div class="col-md-12 banner">
+					<h1>Alfred's CSS Artwork</h1>
+					<p>Below are some Logos and other things made in pure CSS - Made by <a href="http://www.alfredababio.com">Alfred Ababio</a></p>
+					<p class="browser-specific">(Best viewed in Chrome)</p>
+					<p><a class="btn btn-large btn-primary" href="https://github.com/alfredababio/css-logos">View on Github</a></p>
+				</div>
+			</div>
+		</div>
 
-	</div>
-	<div class="container" id="gallery"></div>
-</body>
-</html>
+		<div class="container" id="gallery">
+			<div class="row logo-row">
+				<div class="col-md-3">
+					<div id="html5" class="logo">
+						<div class="shield-half" id="left-shield"></div>
+						<div class="shield-half" id="right-shield"></div>
+						<div id="top-border"></div>
+						<div class="tail-of-five" id="dark-tail"></div>
+						<div class="tail-of-five" id="light-tail"></div>
+						<div id="tail-to-mid"></div>
+						<div class="mid-of-five" id="dark-mid"></div>
+						<div class="mid-of-five" id="light-mid"></div>
+						<div id="mid-to-hook"></div>
+						<div class="hook-of-five" id="dark-hook"></div>
+						<div class="negative-hook" id="dark-negative"></div>
+						<div class="hook-of-five" id="light-hook"></div>
+						<div class="negative-hook" id="light-negative"></div>
+						<div class="outer-border" id="left-outer-border"></div>
+						<div class="outer-border" id="right-outer-border">
+							<div id="right-inner-border"></div>
+						</div>
+						<div class="white-side" id="left-long-side"></div>
+						<div class="white-side" id="right-long-side"></div>
+						<div class="bottom-border" id="dark-bottom">
+							<div class="outer-bottom" id="dark-outer-bottom"></div>
+							<div class="outer-white" id="left-outer-white"></div>
+						</div>
+						<div class="bottom-border" id="light-bottom">
+							<div class="outer-bottom" id="light-outer-bottom"></div>
+							<div class="outer-white" id="right-outer-white"></div>
+						</div>
+					</div>
+					<h2>HTML5</h2>
+					<p>
+						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/css/html5.css">View CSS</a>
+						<a class="btn btn-info" href="https://github.com/alfredababio/css-logos/blob/master/scss/html5.scss">View Sass</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div id="footer">
+			<div class="container">
+				Made by <a href="http://www.alfredababio.com">Alfred Ababio</a> - <a href="http://pattle.github.io/simpsons-in-css/">Credit where credit is due</a>
+			</div>
+		</div>
+	</body>
+	</html>
