jQuery updates to Index page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,27 @@
 						<a class="btn btn-info" href="https://github.com/alfredababio/css-logos/blob/master/scss/html5.scss">View Sass</a></p>
 					</div>
 				</div>
+				<div class="col-md-3">
+					<div id="jquery">
+						<div class="big circle" id="one">
+							<div class="tail"></div>
+						</div>
+						<div class="big circle" id="two"></div>
+						<div class="medium circle" id="three">
+							<div class="tail"></div>
+						</div>
+						<div class="medium circle" id="four"></div>
+						<div class="small circle" id="five">
+							<div class="tail"></div>
+						</div>
+						<div class="small circle" id="six"></div>
+					</div>
+					<h2>jQuery</h2>
+					<p>
+						<a class="btn btn-success" href="">View CSS</a>
+						<a class="btn btn-success" href="">View Sass</a>
+					</p>
+				</div>
 			</div>
 		</div>
 
