--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 					</div>
 					<h2>jQuery</h2>
 					<p>
-						<a class="btn btn-success" href="">View CSS</a>
-						<a class="btn btn-success" href="">View Sass</a>
+						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/css/jquery.css">View CSS</a>
+						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/scss/jquery.scss">View Sass</a>
 					</p>
 				</div>
 			</div>
