--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" href="css/html5.css" />
+	<link rel="stylesheet" href="css/jquery.css" />
 </head>
 <body>
 	<div id="wrap">
@@ -63,24 +64,25 @@
 					<h2>HTML5</h2>
 					<p>
 						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/css/html5.css">View CSS</a>
-						<a class="btn btn-info" href="https://github.com/alfredababio/css-logos/blob/master/scss/html5.scss">View Sass</a></p>
-					</div>
+						<a class="btn btn-info" href="https://github.com/alfredababio/css-logos/blob/master/scss/html5.scss">View Sass</a>
+					</p>
 				</div>
+
 				<div class="col-md-3">
-					<div id="jquery">
-						<div class="big circle" id="one">
-							<div class="tail"></div>
-						</div>
-						<div class="big circle" id="two"></div>
-						<div class="medium circle" id="three">
-							<div class="tail"></div>
-						</div>
-						<div class="medium circle" id="four"></div>
-						<div class="small circle" id="five">
-							<div class="tail"></div>
-						</div>
-						<div class="small circle" id="six"></div>
-					</div>
+					<div id="jquery" class="logo">
+    <div class="big circle" id="one">
+        <div class="tail"></div>
+    </div>
+    <div class="big circle" id="two"></div>
+    <div class="medium circle" id="three">
+        <div class="tail"></div>
+    </div>
+    <div class="medium circle" id="four"></div>
+    <div class="small circle" id="five">
+        <div class="tail"></div>
+    </div>
+    <div class="small circle" id="six"></div>
+</div>
 					<h2>jQuery</h2>
 					<p>
 						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/css/jquery.css">View CSS</a>
@@ -89,12 +91,13 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
-
-		<div id="footer">
-			<div class="container">
-				Made by <a href="http://www.alfredababio.com">Alfred Ababio</a> - <a href="http://pattle.github.io/simpsons-in-css/">Credit where credit is due</a>
-			</div>
+	<div id="footer">
+		<div class="container">
+			Made by <a href="http://www.alfredababio.com">Alfred Ababio</a> - <a href="http://pattle.github.io/simpsons-in-css/">Credit where credit is due</a>
 		</div>
-	</body>
-	</html>
+	</div>
+</div>
+</body>
+</html>
