Fixed HTML5 to not be terribad anymore

--- a/html5.html
+++ b/html5.html
@@ -16,9 +16,12 @@
 		<div class="mid-of-five" id="light-mid"></div>
 		<div id="mid-to-hook"></div>
 		<div class="hook-of-five" id="dark-hook"></div>
-		<div class="negative-hook" id="dark-negative"></div>
+        <div class="negative-hook" id="dark-negative"></div>
 		<div class="hook-of-five" id="light-hook"></div>
-		<div class="negative-hook" id="light-negative"></div>
+        <div class="negative-hook" id="light-negative">
+            <div id="hack-side"></div>
+            <div id="hack-bottom"> </div>
+        </div>
 		<div class="outer-border" id="left-outer-border"></div>
 		<div class="outer-border" id="right-outer-border">
 			<div id="right-inner-border"></div>
