Swapped out old HTML5 for new one

--- a/index.html
+++ b/index.html
@@ -33,34 +33,37 @@
 			<div class="row logo-row">
 				<div class="col-md-3">
 					<div id="html5" class="logo">
-						<div class="shield-half" id="left-shield"></div>
-						<div class="shield-half" id="right-shield"></div>
-						<div id="top-border"></div>
-						<div class="tail-of-five" id="dark-tail"></div>
-						<div class="tail-of-five" id="light-tail"></div>
-						<div id="tail-to-mid"></div>
-						<div class="mid-of-five" id="dark-mid"></div>
-						<div class="mid-of-five" id="light-mid"></div>
-						<div id="mid-to-hook"></div>
-						<div class="hook-of-five" id="dark-hook"></div>
-						<div class="negative-hook" id="dark-negative"></div>
-						<div class="hook-of-five" id="light-hook"></div>
-						<div class="negative-hook" id="light-negative"></div>
-						<div class="outer-border" id="left-outer-border"></div>
-						<div class="outer-border" id="right-outer-border">
-							<div id="right-inner-border"></div>
-						</div>
-						<div class="white-side" id="left-long-side"></div>
-						<div class="white-side" id="right-long-side"></div>
-						<div class="bottom-border" id="dark-bottom">
-							<div class="outer-bottom" id="dark-outer-bottom"></div>
-							<div class="outer-white" id="left-outer-white"></div>
-						</div>
-						<div class="bottom-border" id="light-bottom">
-							<div class="outer-bottom" id="light-outer-bottom"></div>
-							<div class="outer-white" id="right-outer-white"></div>
-						</div>
-					</div>
+		<div class="shield-half" id="left-shield"></div>
+		<div class="shield-half" id="right-shield"></div>
+		<div id="top-border"></div>
+		<div class="tail-of-five" id="dark-tail"></div>
+		<div class="tail-of-five" id="light-tail"></div>
+		<div id="tail-to-mid"></div>
+		<div class="mid-of-five" id="dark-mid"></div>
+		<div class="mid-of-five" id="light-mid"></div>
+		<div id="mid-to-hook"></div>
+		<div class="hook-of-five" id="dark-hook"></div>
+        <div class="negative-hook" id="dark-negative"></div>
+		<div class="hook-of-five" id="light-hook"></div>
+        <div class="negative-hook" id="light-negative">
+            <div id="hack-side"></div>
+            <div id="hack-bottom"> </div>
+        </div>
+		<div class="outer-border" id="left-outer-border"></div>
+		<div class="outer-border" id="right-outer-border">
+			<div id="right-inner-border"></div>
+		</div>
+		<div class="white-side" id="left-long-side"></div>
+		<div class="white-side" id="right-long-side"></div>
+		<div class="bottom-border" id="dark-bottom">
+			<div class="outer-bottom" id="dark-outer-bottom"></div>
+			<div class="outer-white" id="left-outer-white"></div>
+		</div>
+		<div class="bottom-border" id="light-bottom">
+			<div class="outer-bottom" id="light-outer-bottom"></div>
+			<div class="outer-white" id="right-outer-white"></div>
+		</div>
+	</div>
 					<h2>HTML5</h2>
 					<p>
 						<a class="btn btn-success" href="https://github.com/alfredababio/css-logos/blob/master/css/html5.css">View CSS</a>
