--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 					<h1>Alfred's CSS Artwork</h1>
 					<p>Below are some Logos and other things made in pure CSS - Made by <a href="http://www.alfredababio.com">Alfred Ababio</a></p>
 					<p class="browser-specific">(Best viewed in Chrome)</p>
-					<p><a class="btn btn-large btn-primary" href="https://github.com/alfredababio/css-logos">View on Github</a></p>
+					<p><a class="btn btn-large btn-primary" href="https://github.com/alfredababio/css-logos">View on Github</a>
+					<a class="btn btn-large btn-twitter" href="https://twitter.com/alfredabab_io">Follow me on Twitter</a></p>
 				</div>
 			</div>
 		</div>
