shortened credit text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 	<div id="footer">
 		<div class="container">
-			Made by <a href="http://www.alfredababio.com">Alfred Ababio</a> - <a href="http://pattle.github.io/simpsons-in-css/">Credit where credit is due</a>
+			Made by <a href="http://www.alfredababio.com">Alfred Ababio</a> - <a href="http://pattle.github.io/simpsons-in-css/">Inspiration</a>
 		</div>
 	</div>
 </div>
